# sourcebridge

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  Makefile  README.md  TELEMETRY.md  config.toml.example  demo.sh  docker-compose.demo.yml  docker-compose.hub.yml  docker-compose.yml  go.mod  go.sum  gqlgen.yml
workers/: __main__.py  cli_ask.py  pyproject.toml
workers/benchmarks/: __init__.py  analyze_local_sweep.py  run_cloud_addenda.py  run_comprehension_bench.py  run_deep_depth_bench.py  run_local_sweep.py  run_medium_sweep.py  run_other_artifacts_bench.py  run_other_artifacts_top5.py
workers/common/: config.py  grpc_metadata.py  surreal.py
workers/comprehension/: capabilities.py  hierarchical.py  long_context.py  renderers.py  selector.py  single_shot.py  strategy.py
workers/contracts/: detector.py
workers/enterprise/: report_servicer.py
workers/knowledge/: architecture_diagram.py  cliff_notes.py  code_tour.py  evidence.py  explain_system.py  job_logs.py  job_state.py  learning_path.py  parse_utils.py  proto_enums.py  retrieval.py  servicer.py  snapshot_truncate.py  summary_nodes.py  types.py  workflow_story.py
workers/linking/: servicer.py
workers/reasoning/: answer_stream.py  decomposer.py  discussion.py  explainer.py  reviewer.py  servicer.py  summarizer.py
workers/reports/: __init__.py  assembler.py  engine.py  evidence_registry.py  renderer_md.py  section_generator.py
workers/requirements/: servicer.py  spec_extraction.py
workers/tests/: test_architecture_diagram.py  test_cli_ask.py  test_cliff_notes.py  test_cliff_notes_renderer.py  test_code_corpus.py  test_comprehension_bench.py  test_config.py  test_evidence.py  (+18 more)
(+605 files in other folders)
